[metadata]
name = pytest-abq
description = ABQ integration for Pytest
license = MIT

[options]
packages = find:
package_dir = =src
zip_safe = False
python_requires = >=3.7
install_requires =
    typing_extensions

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    abq = pytest_abq

[mypy]
mypy_path = pytest_abq
